--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,7 @@
 name = "mini_macro"
 version = "0.1.0"
 edition = "2024"
+description = "helper mini macros"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
