--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "mini_macro"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2024"
 description = "helper mini macros"
+documentation = "https://docs.rs/mini_macro"
+repository = "https://github.com/kaigedong/mini_macro"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
